samples/_failures_safe/1761095932_9ee148_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f7e271a6.c:160:6: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  160 | enum compression_type get_compression
      |      ^~~~~~~~~~~~~~~~
